@@ -166,6 +166,24 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|NodeId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
 name|conf
 operator|.
 name|YarnConfiguration
@@ -299,6 +317,46 @@ operator|.
 name|rmnode
 operator|.
 name|RMNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|rmnode
+operator|.
+name|RMNodeEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|rmnode
+operator|.
+name|RMNodeEventType
 import|;
 end_import
 
@@ -753,6 +811,57 @@ expr_stmt|;
 name|printConfiguredHosts
 argument_list|()
 expr_stmt|;
+block|}
+for|for
+control|(
+name|NodeId
+name|nodeId
+range|:
+name|rmContext
+operator|.
+name|getRMNodes
+argument_list|()
+operator|.
+name|keySet
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|isValidNode
+argument_list|(
+name|nodeId
+operator|.
+name|getHost
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|this
+operator|.
+name|rmContext
+operator|.
+name|getDispatcher
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|RMNodeEvent
+argument_list|(
+name|nodeId
+argument_list|,
+name|RMNodeEventType
+operator|.
+name|DECOMMISSION
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|setDecomissionedNMsMetrics ()
