@@ -1093,6 +1093,14 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
+name|checkDecommissionedNMCount
+argument_list|(
+name|rm
+argument_list|,
+operator|++
+name|metricCount
+argument_list|)
+expr_stmt|;
 name|nodeHeartbeat
 operator|=
 name|nm1
@@ -1123,7 +1131,7 @@ name|Assert
 operator|.
 name|assertEquals
 argument_list|(
-literal|0
+literal|1
 argument_list|,
 name|ClusterMetrics
 operator|.
@@ -1160,14 +1168,6 @@ operator|.
 name|getNodeAction
 argument_list|()
 argument_list|)
-argument_list|)
-expr_stmt|;
-name|checkDecommissionedNMCount
-argument_list|(
-name|rm
-argument_list|,
-operator|++
-name|metricCount
 argument_list|)
 expr_stmt|;
 name|nodeHeartbeat
@@ -1421,6 +1421,15 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
+name|checkDecommissionedNMCount
+argument_list|(
+name|rm
+argument_list|,
+name|metricCount
+operator|+
+literal|2
+argument_list|)
+expr_stmt|;
 name|nodeHeartbeat
 operator|=
 name|nm1
@@ -1507,15 +1516,6 @@ name|dispatcher
 operator|.
 name|await
 argument_list|()
-expr_stmt|;
-name|checkDecommissionedNMCount
-argument_list|(
-name|rm
-argument_list|,
-name|metricCount
-operator|+
-literal|2
-argument_list|)
 expr_stmt|;
 name|writeToHostsFile
 argument_list|(
@@ -1745,6 +1745,14 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
+name|checkDecommissionedNMCount
+argument_list|(
+name|rm
+argument_list|,
+operator|++
+name|initialMetricCount
+argument_list|)
+expr_stmt|;
 name|nodeHeartbeat
 operator|=
 name|nm1
@@ -1798,14 +1806,6 @@ name|nodeHeartbeat
 operator|.
 name|getNodeAction
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|checkDecommissionedNMCount
-argument_list|(
-name|rm
-argument_list|,
-operator|++
-name|initialMetricCount
 argument_list|)
 expr_stmt|;
 block|}
@@ -1963,6 +1963,14 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
+name|checkDecommissionedNMCount
+argument_list|(
+name|rm
+argument_list|,
+operator|++
+name|initialMetricCount
+argument_list|)
+expr_stmt|;
 name|nodeHeartbeat
 operator|=
 name|nm1
@@ -2016,14 +2024,6 @@ name|nodeHeartbeat
 operator|.
 name|getNodeAction
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|checkDecommissionedNMCount
-argument_list|(
-name|rm
-argument_list|,
-operator|++
-name|initialMetricCount
 argument_list|)
 expr_stmt|;
 block|}
